--- a/Programming/Exams/C-Programming_Exam/Теория/Вопрос 5.md
+++ b/Programming/Exams/C-Programming_Exam/Теория/Вопрос 5.md
@@ -27,7 +27,7 @@ ___
 Каждый символ по отдельности хранится в своей ячейки памяти в естественном виде, также как он и расположен в строке.
 На символ конца строки тоже нужно выделять память! То есть:
 ```c
-char stroka[16] = "Examen po proge" // Сама строка из 15 символов, но добавляем                                        // символ конца строки и получится 16.
+char stroka[16] = "Examen po proge" // Сама строка из 15 символов, но добавляем символ конца строки и получится 16.
 ```
 `char` - тип данных.
 `stroka` - название переменной.
@@ -82,12 +82,12 @@ ___
         - `%s` — строка.
         - `%c` — символ.
     - Пример:
-	    ```c
-	    int a;
-		float b;
-		char str[100];
-		scanf("%d %f %s", &a, &b, str);
-		```
+      ```c
+      int a;
+      float b;
+      char str[100];
+      scanf("%d %f %s", &a, &b, str);
+      ```
 **Работа с форматными строками**
 Форматная строка определяет, как обрабатываются данные:
 - **Пример вывода с шириной и точностью:**
