question 9 and minor fixes in question 6

--- a/Programming/Exams/C-Programming_Exam/Теория/Вопрос 6.md
+++ b/Programming/Exams/C-Programming_Exam/Теория/Вопрос 6.md
@@ -72,5 +72,5 @@ ___
 	   - в первой скобке сначала выполняются операции отношения, а потом операция ИЛИ. `1 ИЛИ 1`. Исход: `1`
 	   - во второй скобке всего одна операция, поэтому тут без проблем. `15 равно 15`. Исход: `1`
 	2. Затем выполняется операция НЕ для второй скобки. `НЕ 1`. Исход: 0
-	3. После выполняется Логическое ИЛИ для двух частей оставшегося выражения. `1 И 0`. Исход: `0`
+	3. После выполняется Логическое И для двух частей оставшегося выражения. `1 И 0`. Исход: `0`
 Исход: *0 (Ложь)*.
