update question 11, secret guest

--- a/Programming/Exams/C-Programming_Exam/Теория/Вопрос 11.md
+++ b/Programming/Exams/C-Programming_Exam/Теория/Вопрос 11.md
@@ -77,6 +77,45 @@ printf("%d\n", value); // Вывод: 6
 - Обращение к строкам - `matrix[i]` то же самое что и `*(matrix + i)`.
 - Обращение к элементам - `matrix[i][j]` эквивалентен `*(*(matrix + i) + j)`.
 ___
+**Примечание от Мастера Си-си:** Ребятки, ку! Постараюсь помочь вам с полным пониманием указателей на массив и что за страшная конструкция в виде `*(*(matrix + i) + j)`. Начнем с того, что указатель на массив - это указатель на его первый элемент. То есть буквально так:
+``` C
+{
+  int arr[3] = {34, 12, 2};
+  int *p = arr; // *p = &arr[0]. Сейчас в 'p' хранится значение '34'
+}
+```
+Теперь разберемся, что мы получаем, когда заходим в цикл и проходимся с помощью указателей по всему массиву. У нас есть цикл, который проходится по каждому элементу массива, где итератор - это $i$. Теперь мы получаем, что конструкция примет следующий вид при выводе элемента в поток вывода `*(matrix + i)`. Здесь мы вспоминаем, что указатель на массив - это указатель на первый элемент. Так давайте переведем это в более наглядный вид и будем считать, что идет вторая итерация цикла, то есть  $i = 1$: `*(matrix[0] + 1)`. Здесь мы отлично видим, что к первому элементу добавляется сдвиг на один байт, то есть теперь мы имеем $matrix[1] = 12$.  **Отсюда  мы можем сделать вывод, что конструкция** `*(matrix + i)` **это ведь наше привычное** `matrix[i]`.
+
+Во второй части хотел бы разобрать конкретно конструкцию `*(*(matrix + i) + j)`, когда у нас двумерный массив и два вложенных цикла. А отсюда мы какой вывод можем сделать девочки?))) Конечно, это то же самое, что и `matrix[i][j]`. Пример для лучшего понимания:
+``` C
+#include <stdio.h>
+
+int main(void) {
+    int arr[2][2] = {
+        {23, 15},
+        {0, 1}
+    };
+
+    int *p = arr[0]; // *p = &arr[0][0]
+
+    for (int i = 0; i < 2; i++) {
+        for (int j = 0; j < 2; j++) {
+            printf("arr[%d][%d]. Значение: %d\n", i, j, *(*(arr + i) + j));
+        }
+    }
+}
+```
+
+Вывод:
+```
+arr[0][0]. Значение: 23
+arr[0][1]. Значение: 15
+arr[1][0]. Значение: 0
+arr[1][1]. Значение: 1
+```
+
+**Небольшое пояснение:** почему я указываю именно на $arr[0]$, а не на arr. Если я указываю на arr, то я указываю на `&arr[0]`, а у нас двумерный массив, поэтому мы должны указывать на первый элемент с указанием номера строки и столбца. Отсюда мы понимаем, что если наш указатель уже указывает  на `&arr[0]` (строка), то на что нам еще нужно указать? Ну, конечно, на столбец. Поэтому запись принимает вид $*p = matrix[0]$. Если это для вас кажется сложным или вам просто тяжеловатенько запомнить это, то вы можете использовать другую запись: `int *p = &arr[0][0]` <=> `int *p = matrix[0]`
+___
 **Массивы и функции**
 Массивы передаются в функции **по адресу**, а не по значению.
 Пример на передачу массива в функцию:
