question 12 and some fixes in 11 question

--- a/Programming/Exams/C-Programming_Exam/Теория/Вопрос 11.md
+++ b/Programming/Exams/C-Programming_Exam/Теория/Вопрос 11.md
@@ -144,7 +144,7 @@ void printMatrix(int matrix[][3], int rows) {
     }
 }
 ```
-Также можно передавать массив так:
+Также можно передавать массив так(но лучше так не делать):
 ```c
 void printMatrix(int *matrix, int rows, int cols) {
     for (int i = 0; i < rows; i++) {
@@ -155,13 +155,13 @@ void printMatrix(int *matrix, int rows, int cols) {
     }
 }
 ```
-В таком случае, элемент массива получать нужно так: 
+В таком случае, элемент массива получать нужно следующим образом: 
 ```c
 matrix[i][j] = *(matrix + i * cols + j)
 ```
 ___
 **Примеры**
-Нахождение суммы элементов массива (явно не использовав указатель, т.к имя массива - указатель на его первый элемент):
+Нахождение суммы элементов массива:
 ```c
 int sumArray(int arr[], int size) {
     int sum = 0;
@@ -170,7 +170,6 @@ int sumArray(int arr[], int size) {
     }
     return sum;
 }
-
 ```
 
 Вывод матрицы:
@@ -183,8 +182,8 @@ void processMatrix(int (*matrix)[3], int rows) {
         printf("\n");
     }
 }
-
 ```
+- передаем в аргумент указатель на массив(строки) массивов(столбцы) из 3 элементов.
 
 Транспонирование матрицы через указатели:
 ```c
@@ -195,9 +194,8 @@ void transposeMatrix(int (*matrix)[3], int (*transposed)[2], int rows, int cols)
         }
     }
 }
-
 ```
-Напоминаю, `transposed[j][i] = matrix[i][j]` будет равно
+Напоминаю, `transposed[j][i] = matrix[i][j]` выполняет ту же функцию, что и
 `*(*(transposed + j) + i) = *(*(matrix + i) + j)`
 ___
 **База**
